--- a/src/styles/components/_helpmap.scss
+++ b/src/styles/components/_helpmap.scss
@@ -9,3 +9,11 @@
     width: 100%;
     box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .14), 0 6px 30px 5px rgba(0, 0, 0, .12), 0 8px 10px -5px rgba(0, 0, 0, .2)
 }
+
+.search-spinner {
+    position: absolute; 
+    top: calc(50% - 4em); 
+    left: calc(50% - 4em); 
+    width: 6em; 
+    height: 6em;
+}
